--- a/bib/thesis.bib
+++ b/bib/thesis.bib
@@ -1,10 +1,10 @@
-@inproceedings{schafer1999recommender,
+@inproceedings{sivapalan2014recommender,
   title={Recommender systems in e-commerce},
-  author={Schafer, J Ben and Konstan, Joseph and Riedl, John},
-  booktitle={Proceedings of the 1st ACM conference on Electronic commerce},
-  pages={158--166},
-  year={1999},
-  organization={ACM}
+  author={Sivapalan, Sanjeevan and Sadeghian, Alireza and Rahnama, Hossein and Madni, Asad M},
+  booktitle={2014 World Automation Congress (WAC)},
+  pages={179--184},
+  year={2014},
+  organization={IEEE}
 }
 
 @article{konstan1997grouplens,
@@ -16,6 +16,17 @@
   pages={77--87},
   year={1997},
   publisher={ACM}
+}
+
+@article{adomavicius2005toward,
+  title={Toward the next generation of recommender systems: A survey of the state-of-the-art and possible extensions},
+  author={Adomavicius, Gediminas and Tuzhilin, Alexander},
+  journal={IEEE transactions on knowledge and data engineering},
+  volume={17},
+  number={6},
+  pages={734--749},
+  year={2005},
+  publisher={IEEE}
 }
 
 @article{portugal2015use,
@@ -50,6 +61,16 @@
   publisher={IOS press}
 }
 
+@article{richter2013case,
+  title={Case-based reasoning},
+  author={Richter, Michael M and Weber, Rosina O},
+  journal={A Textbook},
+  volume={546},
+  year={2013},
+  publisher={Springer}
+}
+
+
 @article{barth2014design,
   title={Design and implementation of a flight recommendation engine.},
   author={Barth, Raul S{\'e}rgio},
@@ -65,12 +86,15 @@
   organization={Springer}
 }
 
-@inproceedings{oard1998implicit,
-  title={Implicit feedback for recommender systems},
-  author={Oard, Douglas W and Kim, Jinmook and others},
-  booktitle={Proceedings of the AAAI workshop on recommender systems},
-  pages={81--83},
-  year={1998}
+@article{nunez2012implicit,
+  title={Implicit feedback techniques on recommender systems applied to electronic books},
+  author={N{\'u}{\~n}ez-Vald{\'e}z, Edward Rolando and Lovelle, Juan Manuel Cueva and Mart{\'\i}nez, Oscar Sanju{\'a}n and Garc{\'\i}a-D{\'\i}az, Vicente and de Pablos, Patricia Ordo{\~n}ez and Mar{\'\i}n, Carlos Enrique Montenegro},
+  journal={Computers in Human Behavior},
+  volume={28},
+  number={4},
+  pages={1186--1193},
+  year={2012},
+  publisher={Elsevier}
 }
 
 @inproceedings{breese1998empirical,
@@ -91,6 +115,17 @@
   organization={Citeseer}
 }
 
+@inproceedings{bogers2015report,
+  title={Report on RecSys 2014: Workshop on New Trends in Content-Based Recommender Systems},
+  author={Bogers, Toine and Koolen, Marijn and Cantador, Iv{\'a}n},
+  booktitle={ACM SIGIR Forum},
+  volume={49},
+  number={1},
+  pages={20--26},
+  year={2015},
+  organization={ACM}
+}
+
 @article{pazzani1999framework,
   title={A framework for collaborative, content-based and demographic filtering},
   author={Pazzani, Michael J},
@@ -102,6 +137,15 @@
   publisher={Springer}
 }
 
+@incollection{pazzani2007content,
+  title={Content-based recommendation systems},
+  author={Pazzani, Michael J and Billsus, Daniel},
+  booktitle={The adaptive web},
+  pages={325--341},
+  year={2007},
+  publisher={Springer}
+}
+
 @inproceedings{soboroff1999combining,
   title={Combining content and collaboration in text filtering},
   author={Soboroff, Ian and Nicholas, Charles},
@@ -110,6 +154,17 @@
   pages={86--91},
   year={1999},
   organization={Citeseer}
+}
+
+@article{bellogin2013empirical,
+  title={An empirical comparison of social, collaborative filtering, and hybrid recommenders},
+  author={Bellog{\'\i}n, Alejandro and Cantador, Iv{\'a}n and D{\'\i}ez, Fernando and Castells, Pablo and Chavarriaga, Enrique},
+  journal={ACM Transactions on Intelligent Systems and Technology (TIST)},
+  volume={4},
+  number={1},
+  pages={14},
+  year={2013},
+  publisher={ACM}
 }
 
 @article{babu2011implementation,
@@ -287,13 +342,14 @@
   publisher={ACM}
 }
 
-@inproceedings{holte1996inferring,
-  title={Inferring what a user is not interested in},
-  author={Holte, Robert C and Yan, John Ng Yuen},
-  booktitle={Conference of the Canadian Society for Computational Studies of Intelligence},
-  pages={159--171},
-  year={1996},
-  organization={Springer}
+@article{bobadilla2013recommender,
+  title={Recommender systems survey},
+  author={Bobadilla, Jes{\'u}s and Ortega, Fernando and Hernando, Antonio and Guti{\'e}rrez, Abraham},
+  journal={Knowledge-Based Systems},
+  volume={46},
+  pages={109--132},
+  year={2013},
+  publisher={Elsevier}
 }
 
 @incollection{billsus1999hybrid,
@@ -405,6 +461,13 @@
   publisher={Springer}
 }
 
+@article{higham2015singular,
+  title={The Singular Value Decomposition},
+  author={Higham, Nicholas J},
+  year={2015},
+  publisher={Princeton University Press}
+}
+
 @article{heinrich2008parameter,
   title={Parameter estimation for text analysis},
   author={Heinrich, Gregor},
@@ -474,13 +537,32 @@
   publisher={Taylor \& Francis Group}
 }
 
+@article{ishwaran2011gibbs,
+  title={Gibbs sampling methods for stick-breaking priors},
+  author={Ishwaran, Hemant and James, Lancelot F},
+  journal={Journal of the American Statistical Association},
+  year={2011},
+  publisher={Taylor \& Francis}
+}
+
 @article{jingfan1997novel,
-  title={A Novel Variable Step Size LMS Adaptive Filtering Algorithm Based on Sigmoid Function [J]},
+  title={A Novel Variable Step Size LMS Adaptive Filtering Algorithm Based on Sigmoid Function},
   author={Jingfan, Qin and Jingzheng, Ouyang},
   journal={Journal of Data Acquisition \& Processing},
   volume={3},
   pages={002},
   year={1997}
+}
+
+@article{yonaba2010comparing,
+  title={Comparing sigmoid transfer functions for neural network multistep ahead streamflow forecasting},
+  author={Yonaba, H and Anctil, F and Fortin, V},
+  journal={Journal of Hydrologic Engineering},
+  volume={15},
+  number={4},
+  pages={275--283},
+  year={2010},
+  publisher={American Society of Civil Engineers}
 }
 
 
@@ -511,6 +593,17 @@
   pages={43--52},
   year={1998},
   organization={Morgan Kaufmann Publishers Inc.}
+}
+
+@article{ekstrand2011collaborative,
+  title={Collaborative filtering recommender systems},
+  author={Ekstrand, Michael D and Riedl, John T and Konstan, Joseph A},
+  journal={Foundations and Trends in Human-Computer Interaction},
+  volume={4},
+  number={2},
+  pages={81--173},
+  year={2011},
+  publisher={Now Publishers Inc.}
 }
 
 @inproceedings{herlocker1999algorithmic,
