--- a/tex/01_intro.tex
+++ b/tex/01_intro.tex
@@ -5,25 +5,30 @@
 
 
 \section{研究背景及意义}
-近年来，国内的旅游业和电子商务都得到迅猛的发展，在线旅游业务同时结合了二者的特点，也逐渐走进用户的视野。国内兴起了大量的在线旅行服务企业，它们注重于将原线下旅行社的业务模式发布在线上平台，为用户提供高效、便捷的旅行产品订购体验。机票订购业务作为在线旅行票务服务企业的重要业务之一，为大量用户提供在线选购机票的业务支持。用户通过在机票搜索页面输入自己的出发城市、到达城市、出发日期等出行信息，即可检索到所有航空公司提供的符合条件的航班，页面除了展示起降时间、航班、舱位、价格等基础信息外，还包括准点率、退改签政策等详细服务信息。在传统的机票订购业务中，用户需要自行聚合各航司的票务信息，而在线机票服务平台集合了所有航司的可以给用户提供更丰富、实时的票务信息。
+近年来，国内的旅游业和电子商务都得到迅猛的发展，在线旅游业务同时结合了二者的特点，也逐渐走进用户的视野。国内兴起了大量的在线旅行服务企业，它们注重于将原线下旅行社的业务模式发布在线上平台，为用户提供高效、便捷的旅行产品订购体验。机票订购业务作为在线旅行票务服务企业的重要业务之一，为大量用户提供在线选购机票的业务支持。用户通过在机票搜索页面输入自己的出发城市、到达城市、出发日期等出行信息，即可检索到所有航空公司符合条件的航班，页面除了展示起降时间、航班、舱位、价格等基础信息外，还包括准点率、退改签政策等详细服务信息。在传统的机票订购业务中，用户需要自行聚合各航司的票务信息，而在线机票服务平台可以给用户提供更丰富、实时的票务信息。
 
 虽然在线机票订购业务丰富了用户的选择，但对于很多航线，展示结果往往包括上百条候选机票。这些机票一般以航班为粒度，每个航班下细分多个舱位，每个舱位对应不同的价格和退改签政策。为了根据偏好及出行计划选购最适合的机票，用户通常需要反复浏览、比较，增加了用户的选择成本，降低了交互效率，也会对转化率带来影响。如果能够从众多候选机票中为用户推荐适合的机票，就可以减少用户在候选机票列表页的停留时长，进一步提升用户体验，会对网站的转化率起到积极作用。
 
-在线机票票务网站往往只提供一些基于业务规则的排序、筛选策略，如起飞时间排序、价格排序，以及按起飞时段筛选、按航司筛选等。这些策略虽然可以减少候选机票的数量，但无法根据用户的偏好和出行划为每位用户进行个性化机票推荐。如果能够根据每位用户的偏好，为该用户从搜索生成的候选机票列表中推荐满足其偏好的机票，可以更有效地克服机票选购中信息过载问题。因此，个性化机票推荐具有实际应用意义。
+在线机票票务网站往往只提供一些基于业务规则的排序、筛选策略，如起飞时间排序、价格排序，以及按起飞时段筛选、按航司筛选等。这些策略虽然可以减少候选机票的数量，但无法为每位用户进行个性化机票推荐。如果能够根据用户的偏好及出行计划，为该用户从机票搜索结果中进行机票推荐，则可以更有效地克服机票选购中信息过载问题。因此，个性化机票推荐具有重要的实际应用意义。
 
-推荐系统诞生于二十世纪九十年代，其作用是为用户发现合适的商品或服务\cite{schafer1999recommender,konstan1997grouplens}。随着互联网产业的普及与生态的推广，网络信息急速膨胀，信息过载问题普遍存在。除了信息检索引擎外，作为克服信息过载问题的另一种重要方案，推荐系统在学术界和工业界都受到很大的重视，逐渐形成一个独立的研究方向并得到持续发展。当今，推荐系统在电子商务平台、多媒体分发平台等领域扮演着愈加重要的角色。
+推荐系统诞生于二十世纪九十年代，其作用是为用户发现合适的商品或服务\cite{sivapalan2014recommender,adomavicius2005toward}。随着互联网产业的普及与生态的推广，网络信息急速膨胀，信息过载问题普遍存在。推荐系统作为克服信息过载问题的一种重要方案，在学术界和工业界都受到很大的重视，并逐渐形成一个独立的研究方向并得到持续发展。当今，推荐系统在电子商务平台、多媒体分发平台等领域扮演着愈加重要的角色。然而，机票推荐与传统的推荐算法有所不同：
 
-由于机票的价格在起飞日期之前是持续变动的，并且价格的波动范围较大，而价格是用户订购机票时考虑的重要特征；同时由于机票物品具有极强的实时性，机票的数量受限于飞机的舱位数量，用户每次搜索产生成的候选机票列表都不相同。因此机票推荐与一般的电影、音乐等传统物品的推荐算法有所不同。如何合理地为在线机票订购场景实现个性化推荐，是一个关键的问题。
+\begin{itemize}
+  \item 物品特征的动态性。与书籍、电影等物品不同，机票的价格在起飞日期前是频繁变动的，并且价格的波动范围较大，作为用户订购机票时考虑的重要特征，机票间的价格差异不能忽略。
+  \item 物品的实时性。与传统物品不同，机票的数量受限于航班的舱位安排，具有极强的实时性。用户在短时间内的搜索产生的候选机票列表可能会发生改变。
+\end{itemize}
 
-机器学习的概念诞生于二十世纪五十年代\cite{portugal2015use}。随着计算机产业的发展，机器学习逐渐在更多的领域被广泛应用。现如今有包括K-NN，聚类以及贝叶斯网络等很多种机器学习算法都被应用在诸如图像识别、无人驾驶车辆等领域。机器学习算法也被应用在推荐系统中，能够提升推荐的效果。然而，由于在研究中提出的新模型及其变种的数量过于庞大，机器学习领域的算法并不存在一个清晰的分类。如何将机器学习结合到推荐系统中，以及如何选择一种最适合推荐场景的机器学习算法都是极具挑战性的问题。
+基于机票物品的上述特性，现有的推荐算法难以直接应用在机票推荐领域。如何适应机票的动态特征进而合理地为机票订购场景提供个性化推荐，是一个具有重要研究价值的问题。
+
+机器学习的概念诞生于二十世纪五十年代\cite{portugal2015use}。随着计算机产业的发展，机器学习逐渐在更多的领域被广泛应用。现如今有包括K-NN，聚类以及贝叶斯网络等很多种机器学习算法都被应用在诸如图像识别、无人驾驶车辆等领域。机器学习算法也被应用在推荐系统中，以提升推荐的效果。然而，由于机器学习领域的新模型及其变种的数量过于庞大，该领域包含的算法并不存在一个清晰的分类。如何将机器学习结合到推荐系统中，以及如何选择一种适用于机票推荐场景的机器学习算法是极具挑战性的问题。
 
 本课题是与一家国内知名在线票务服务商的合作项目，研究使用的数据是经该公司授权、用户脱敏的机票原始订单，我们在严格保证数据机密的条件下，可以对数据进行手机、采样、分析等操作。此外，目前已有很多开放使用的数据分析工具如R，Python第三方工具包等，可以用于单机进行少量数据的处理与分析；还有包括Hive，Spark等分布式数据仓库和计算工具，可以用于算法的大规模并行计算与生产环境线上部署。综上，本研究课题在技术方案方面、数据资源以及计算资源方面都有可行性保证。
 
-结合研究问题的实际应用意义以及各方面的可行性，本文对如何为用户进行机票方案的个性化推荐展开研究。论文主要提出一套契合在线机票业务场景的数据预处理、分析与推荐算法。首先根据用户的历史订单数据建立用户的偏好模型，并结合机票的特征内容，为用户准确、高效地推荐合适的机票。此外，本文还结合了其他相关领域的研究成果，对一些细粒度的场景提出了更具针对性的推荐策略，进一步提升了机票推荐效果。
+结合研究问题的实际应用意义以及各方面的可行性，本文对如何为用户进行机票方案的个性化推荐展开研究。论文主要提出一套契合在线机票业务场景的数据预处理、分析与推荐算法。首先根据用户的历史订单数据建立用户的偏好模型，并结合机票的特征内容，为用户准确、高效地推荐合适的机票。此外，本文还结合了其他相关领域的研究成果，对一些细粒度的场景提出了更具针对性的推荐策略，同时结合了机器学习的方法，进一步提升了机票推荐效果。
 
 \section{国内外研究现状}
 \subsection{机票个性化推荐的研究现状}
-近年来，机票领域的推荐产生了一些学术研究成果，在业界也得到了广泛的应用。个人旅行助手(Personal Travel Assistant, PTA)\cite{coyle2004making} 使用基于案例推理（Case Based Reasoning）\cite{aamodt1994case,kolodner2014case}方法来降低学习用户偏好带来的认知负荷。系统考虑了机票的高度结构化的特性，提出了机票特征维度相似性衡量方法、根据用户隐式反馈为用户建立特征偏好模型的方法以及结构化地进行案例存储的方法。该方法将用户的历史订单数据作为案例进行存储，当需要为用户进行机票推荐时，根据相似度将所有候选机票与存储的案例进行比较，为用户推荐最相似的一张机票。
+近年来，机票领域的推荐产生了一些学术研究成果，在业界也得到了广泛的应用。个人旅行助手(Personal Travel Assistant, PTA)\cite{coyle2004making} 使用基于案例推理（Case Based Reasoning）\cite{richter2013case,kolodner2014case}方法来降低学习用户偏好带来的认知负荷。系统考虑了机票的高度结构化的特性，提出了机票特征维度相似性衡量方法、根据用户隐式反馈为用户建立特征偏好模型的方法以及结构化地进行案例存储的方法。该方法将用户的历史订单数据作为案例进行存储，当需要为用户进行机票推荐时，根据相似度将所有候选机票与存储的案例进行比较，为用户推荐最相似的一张机票。
 
 航班推荐引擎(Flight Recommender Engine, FRE)\cite{barth2014design}是Amadeus公司开发的一套系统，主要功能是为用户推荐合适的航班。系统充分利用了领域知识，将航班的属性抽取出26个维度，使用加权的欧氏距离衡量航班的相似性。系统将用户的出发地、到达地和时间作为限制条件，从数据库中选取与用户条件距离最小的N条数据作为推荐结果展示给用户。
 
@@ -35,7 +40,7 @@
 
 二十世纪九十年代明尼苏达大学GroupLens研究组推出的GroupLens系统\cite{konstan1997grouplens}标志着推荐系统的诞生。推荐系统需要根据用户个人的偏好并结合商品的内容进行推荐，依赖于用户历史行为数据与相关专业领域知识。
 
-用户行为数据根据收集方式分为显式反馈行为和隐式反馈行为\cite{oard1998implicit,lin2001characterized}，根据用户是否偏好该物品分为正反馈以及负反馈\cite{holte1996inferring}。显式反馈可以明确地表示用户对物品喜好与否，总体上有三种表达方式：喜欢/反感 —— 用户使用二元评分机制将物品分为相关与不相关两类\cite{billsus1999hybrid}；打分 —— 将不同的喜好程度映射到不同的评分数值,用来表示对物品的评判\cite{pazzani1996syskill}；文字评论 —— 依据用户对物品的评论来确定用户对物品的偏好\cite{resnick1994grouplens}。而隐式反馈，例如用户对商品的点击、收藏等行为，通常不能直接表达用户对物品的喜爱程度。隐式反馈通常只包含正反馈，如果用户对一项物品产生行为，通常代表用户对该物品有所偏好，反之，却不能认为用户不偏好该物品。显式反馈则可以根据用户的评分高低，同时包含正负反馈。显式反馈通常需要用户的主动参与，因而与显式反馈相比，隐式反馈行为更为普遍，也可以产生更多的用户数据。论文中研究的机票推荐算法只有隐式反馈数据。按照算法基于的信息数据，推荐系统主要分为协同过滤\cite{breese1998empirical}、基于内容推荐\cite{pazzani1999framework,claypool1999combining}以及混合过滤\cite{soboroff1999combining}。
+用户行为数据根据收集方式分为显式反馈行为和隐式反馈行为\cite{nunez2012implicit,lin2001characterized}，根据用户是否偏好该物品分为正反馈以及负反馈\cite{bobadilla2013recommender}。显式反馈可以明确地表示用户对物品喜好与否，总体上有三种表达方式：喜欢/反感 —— 用户使用二元评分机制将物品分为相关与不相关两类；打分 —— 将不同的喜好程度映射到不同的评分数值,用来表示对物品的评判；文字评论 —— 依据用户对物品的评论来确定用户对物品的偏好。而隐式反馈，例如用户对商品的点击、收藏等行为，通常不能直接表达用户对物品的喜爱程度。隐式反馈通常只包含正反馈，如果用户对一项物品产生行为，通常代表用户对该物品有所偏好，反之，却不能认为用户不偏好该物品。显式反馈则可以根据用户的评分高低，同时包含正负反馈。显式反馈通常需要用户的主动参与，因而与显式反馈相比，隐式反馈行为更为普遍，也可以产生更多的用户数据。论文中研究的机票推荐算法只有隐式反馈数据。按照算法基于的信息数据，推荐系统主要分为协同过滤\cite{ekstrand2011collaborative}、基于内容推荐\cite{pazzani2007content,bogers2015report}以及混合过滤\cite{bellogin2013empirical}。
 
 协同过滤是推荐系统研究中最常见的方法，对显式反馈和隐式反馈都适用。在该算法中，物品的相关性不是通过物品自身的内容属性决定的，而是由大量用户-物品行为决定，因此这类方法对领域业务知识的要求较少。协同过滤又包括很多子类，例如：基于用户的推荐\cite{babu2011implementation}、基于物品的推荐\cite{sarwar2001item,linden2003amazon}、基于社会关系的推荐\cite{asabere2015socially,massa2007trust}。协同过滤的基本假设是“用户会喜欢与他具有相似偏好(相近社会关系)的用户喜欢的物品”以及“用户会喜欢与他喜欢的物品具有较高相似性的物品”。在这种方法中，用户-物品行为可以生成一个矩阵，每位用户对应行向量，每个物品对应列向量，每个元素表示用户对物品的评价或行为行为。用户或物品之间的相似性通常由向量的余弦\cite{goshtasby2012similarity}计算。它的优点是在数据充足的情况下具有较好的推荐效果，并且可以对物品的相关性和用户的偏好进行充分的隐性挖掘，但面临数据稀疏和冷启动的问题，庞大的计算量也限制了算法的扩展性。
 		
