--- a/tex/02_related.tex
+++ b/tex/02_related.tex
@@ -18,7 +18,7 @@
 
 图\ref{fig:cbr_arch}展示了基于内容推荐算法的系统架构。其中椭圆形模块代表源数据，包括物品、用户信息；圆角矩形代表关键组件；圆柱形模块代表处理后的数据；箭头方向代表流程及数据流向。
 
-在内容分析组件中，通常会借用信息检索系统中的技术，为源信息中的物品提取特征，生成物品描述以及物品的结构化内容，并将其进行存储。为了在偏好学习阶段对用户偏好模型进行创建及更新，需要存储用户对物品的评价\cite{goldberg1992using}。偏好学习组件基于用户的训练数据集，通常使用有监督学习算法建立用户偏好模型，并将该模型存储在模型仓库中。对于每一个结构化的物品，物品过滤组件会预测用户是否对该物品有偏好，将用户最可能偏好的$K$个物品生成一份推荐列表展示给用户。此外，用户的偏好可能会随时间改变，因此，系统还需维护用户的实时信息，如用户对推荐列表中物品的评价等。根据新生成的训练集，使用偏好学习组件对用户偏好进行自动更新。
+在内容分析组件中，通常会借用信息检索系统中的技术，为源信息中的物品提取特征，生成物品描述以及物品的结构化内容，并将其进行存储。为了在偏好学习阶段对用户偏好模型进行创建及更新，需要存储用户对物品的评价。偏好学习组件基于用户的训练数据集，通常使用有监督学习算法建立用户偏好模型，并将该模型存储在模型仓库中。对于每一个结构化的物品，物品过滤组件会预测用户是否对该物品有偏好，将用户最可能偏好的$K$个物品生成一份推荐列表展示给用户。此外，用户的偏好可能会随时间改变，因此，系统还需维护用户的实时信息，如用户对推荐列表中物品的评价等。根据新生成的训练集，使用偏好学习组件对用户偏好进行自动更新。
 
 \subsection{基于内容推荐系统的优点及缺点}
 
@@ -51,7 +51,7 @@
 \subsection{基于最近邻的推荐算法}
 基于最近邻的推荐算法是协同过滤中最常用的方法之一，包括基于用户的最近邻算法和基于物品的最近邻算法两类。
 
-基于用户的最近邻算法为目标用户根据相似的其他用户做出评价预测及物品推荐。首先需要建立用户间相似度的衡量方法\cite{breese1998empirical}。
+基于用户的最近邻算法为目标用户根据相似的其他用户做出评价预测及物品推荐。首先需要建立用户间相似度的衡量方法。
 \begin{equation}
 \label{eq:user_sim}
 	w(a,b) = \frac{\sum_j(v_{a,j}-\bar{v}_a)(v_{b,j}-\bar{v}_b)}{\sqrt{\sum_j(v_{a,j}-\bar{v}_a)^2\sum_j(v_{b,j}-\bar{v}_b)^2}}
@@ -112,7 +112,7 @@
 
 \section{主题模型}
 
-随着网络上的信息以及专业文献库越来越丰富，自动从文本中抽取有效信息的技术变得更加重要。这类模型在文档标注、自动问答、自动生成摘要等应用场景起到很大作用。在信息检索、自然语言处理、机器学习等研究领域都对该类模型进行了深入研究。近年来，对有监督的文档自动分类研究得到了很多的关注\cite{yang1999evaluation}。然而在很多情景下，文档库中的文档数量十分巨大，既没有预先定义的类别标签库，多数文档也没有标注类别标签。在诸如计算机、生物学等许多研究领域，文档的标签随着研究的进展发生很频繁的变化，对每篇文档进行人工标注也是不现实的。因而，基于无监督的文档模型具有更广阔的应用场景。
+随着网络上的信息以及专业文献库越来越丰富，自动从文本中抽取有效信息的技术变得更加重要。这类模型在文档标注、自动问答、自动生成摘要等应用场景起到很大作用。在信息检索、自然语言处理、机器学习等研究领域都对该类模型进行了深入研究。在起初几年，有监督的文档自动分类方法得到了很多的关注\cite{yang1999evaluation}。然而在很多情景下，文档库中的文档数量十分巨大，既没有预先定义的类别标签库，多数文档也没有标注类别标签。在诸如计算机、生物学等许多研究领域，文档的标签随着研究的进展发生很频繁的变化，对每篇文档进行人工标注也是不现实的。因而，基于无监督的文档模型具有更广阔的应用场景。
 
 在研究实践中发现，基于生成模型\cite{zhong2005generative,hofmann1999probabilistic,blei2003latent,minka2002expectation}的统计方法对解决这类问题很有帮助。这类模型统称为主题模型。主题模型使用无监督策略从文档库中为每篇文档抽取可解释的表示模型。该模型将每篇文档表示成主题的混合分布，每个主题包括一组共同出现频率较高的词。主题可以将具有相似含义的词语联系到一起，还能为包含多种含义的词语确定在使用情境下的具体意义。在先前的研究中，最常见的文档表示方法是词袋模型(bag of words)\cite{zhang2010understanding}。这种模型将高维度的词汇向量转换到低维空间。综上，相比于其他的文档模型，主题模型有三点优势。第一，主题提取的过程是非监督的，即文档不需要标签以及初始化的步骤；第二，提取出的主题是可解释的，用户可以理解主题包含了哪些词汇；第三，每篇文档可以表示成多个主题的集合，可以捕捉主题之间的关系。
 
@@ -122,7 +122,7 @@
 主题模型的种类有很多。常见的方法包括潜在语义分析模型（LSA）、概率潜在语义分析模型（PLSA）以及潜在狄利克雷分布模型（LDA）等。
 
 \subsubsection{LSA模型}
-LSA\cite{deerwester1990indexing}的目的是为文档提取词汇的多重含义，并通过内容分析计算词汇以及文档之间的相似度。模型将文档库表示成一个矩阵，矩阵的每行代表一个词汇，每列代表一篇文档。矩阵的每个元素代表该词汇出现在文档中的频次。矩阵元素的值需要进行加权处理，考虑因素包括该词汇在文档中的重要程度以及该词汇在领域中总体信息丰富程度等。随后，对矩阵进行奇异值分解（singular value decomposition, SVD）\cite{golub1970singular}：
+LSA\cite{deerwester1990indexing}的目的是为文档提取词汇的多重含义，并通过内容分析计算词汇以及文档之间的相似度。模型将文档库表示成一个矩阵，矩阵的每行代表一个词汇，每列代表一篇文档。矩阵的每个元素代表该词汇出现在文档中的频次。矩阵元素的值需要进行加权处理，考虑因素包括该词汇在文档中的重要程度以及该词汇在领域中总体信息丰富程度等。随后，对矩阵进行奇异值分解（singular value decomposition, SVD）\cite{higham2015singular}：
 \begin{equation}
 	A = U\sum V^T
 \end{equation}
