--- a/tex/03_baseline.tex
+++ b/tex/03_baseline.tex
@@ -240,6 +240,6 @@ MA = \frac{\sum_{i=1}^{|M|}A_{rec}(M_i)}{|M|}
 
 
 \section{本章小结}
-本章我们首先介绍了实验数据，并结合业务经验知识，提取机票数据的重要特征并对其中的连续特征进行预处理。其次我们对机票推荐的场景进行介绍，该场景将贯穿后续章节。我们通过对用户历史订单数据进行分析，提出了用户特征分布的偏好模型，又根据衡量信息丰富程度的熵值理论计算用户对每个特征的权重。从而提出了一个完整的个性化机票推荐方法。
+本章我们首先介绍了实验数据，结合业务经验知识，选取机票数据的重要特征并对其中的连续特征进行预处理。其次我们对机票推荐的场景进行介绍，该场景将贯穿后续章节。我们通过对用户历史订单数据进行分析，提出了基于用户特征分布的偏好模型，又根据衡量信息丰富程度的熵值理论计算用户对每个特征的权重，从而提出了一个完整的个性化机票推荐方法。
 
-在数据实验阶段，我们提取了几条热门航线，分析了用户、订单的分布情况。对比了基于特征分布模型的推荐算法以及两种基础的推荐策略在实验数据集上的效果。证实了结合用户偏好的推荐比基于策略推荐有很大的提升。在接下来的几章里，我们将以此方法作为基线推荐算法，细化应用场景，深入研究，以进一步提升推荐算法的准确率。
+在数据实验阶段，我们提取了几条热门航线，分析了用户、订单的分布情况，对基于特征分布模型的推荐算法和两种基础的推荐策略在实验数据集上的效果进行对比，证实了结合用户偏好的推荐比基于策略推荐有很大的提升。在接下来的几章里，我们将以此方法作为基线推荐算法，细化应用场景，深入研究，以进一步提升推荐算法的准确率。
