--- a/tex/05_share.tex
+++ b/tex/05_share.tex
@@ -83,7 +83,7 @@ $K$ & 主题数量\\ \hline
 图\ref{fig:pro_graph}展示了作者主题模型的概率图。带阴影的变量是已知变量；其余是未知变量。每个方框代表一个过程，其右下角的数字是这个过程的循环次数。箭头连接线代表了变量间的条件依赖关系。这个图直观、清晰地表现了生成一条订单文档的过程。
 
 \subsection{模型参数推导}
-在上节的模型描述中，我们介绍了作者主题模型的两个参数矩阵，分别是包含$P$位乘客的乘客-主题分布参数以及包含$K$个主题的主题-词汇分布。有一些算法可以用来推导这些参数，如EM算法、Gibbs采样\cite{george1993variable}等。传统的EM算法可能会产生局部最优问题，并且这种算法的复杂性较高。本章，我们使用Gibbs采样的算法，这种算法不直接进行参数推导，而通过计算抽取的乘客和主题的后验分布，对参数进行更新。因此计算过程较为简单。
+在上节的模型描述中，我们介绍了作者主题模型的两个参数矩阵，分别是包含$P$位乘客的乘客-主题分布参数以及包含$K$个主题的主题-词汇分布。有一些算法可以用来推导这些参数，如EM算法、Gibbs采样\cite{ishwaran2011gibbs}等。传统的EM算法可能会产生局部最优问题，并且这种算法的复杂性较高。本章，我们使用Gibbs采样的算法，这种算法不直接进行参数推导，而通过计算抽取的乘客和主题的后验分布，对参数进行更新。因此计算过程较为简单。
 
 
 \begin{eqnarray}
