--- a/tex/07_summary.tex
+++ b/tex/07_summary.tex
@@ -6,22 +6,22 @@
 \section{本文工作总结}
 本文中的研究工作主要体现在以下几个方面：
 
-1.提出基于特征分布模型的机票推荐算法。通过对原始机票订单的分析，结合业务经验知识，我们提取了影响用户购买决策的机票特征并进行离散化。通过历史订单统计用户在各特征上的选择分布，分析用户对每个特征的偏好。同时，使用信息学中的熵值理论衡量每位用户对机票特征的集中程度，提出了特征权重计算方法。结合机票订购的实际应用场景，将推荐算法分解为离线构建模型和在线计算评分两个步骤，使算法达到了在生产环境部署上线的条件。该算法在后续章节中作为基线算法，用于检测在细化推荐场景后，推荐效果是否有提升。
+1.提出基于特征分布模型的机票推荐算法。通过对原始机票订单的分析，结合业务经验知识，提取了影响用户购买决策的机票特征并进行离散化。通过历史订单统计用户在各特征上的选择分布，分析用户对每个特征的偏好。此外，使用信息学中的熵值理论衡量每位用户对机票特征的集中程度，提出了特征权重计算方法。结合机票订购的实际应用场景，将推荐算法分解为离线构建模型和在线计算评分两个步骤，使算法达到了在生产环境部署上线的条件。该算法在后续章节中作为基线算法，用于检测在细化推荐场景后，推荐效果是否有提升。
 
 2.提出解决机票推荐冷启动问题的方法。分析了不同航线上的特征分布以及用户行为分布的差异，并结合数据实验验证了航线间差异对机票推荐准确率的影响，提出了机票推荐领域的冷启动问题。根据用户历史订单数量，将问题分为航线冷启动问题以及用户冷启动问题。对于第一个问题，提出了基于特征分布和用户行为分布的航线相似度度量方法，为用户选取最优相似航线并构建修正混合模型。对于在所有航线都属于冷启动的用户，通过挖掘用户和乘客之间多样的对应关系，依据共同乘客以及共同出行建立了用户间的社会关系，提出了增强用户模型。
 
 3.提出结合共享账户乘客预测的机票推荐算法。分析了机票选购场景中的共享账户问题，基于乘客间存在偏好差异的事实，提出了基于乘客预测的推荐构想。使用作者-主题模型对乘客的行为模型进行建模，将每个账户下的所有历史订单视为语料库，将每条订单视为文档，将机票特征内容及购票上下文视为词库，将订单的乘客视为文档的作者。使用Gibbs采样的方法对模型进行训练，并结合进行机票推荐时的上下文信息进行乘客预测。最后将乘客预测与机票推荐结合起来，为用户提供更有针对性的推荐。
 
-4.提出结合隐性特征的机票推荐算法。通过对比不同起飞日期的机票推荐准确率，证明了用户的偏好并非一成不变，而是在某些起飞日期可能会产生行为变化。而用户的显性特征偏好模型无法反映这一特点。我们为用户模型和机票内容添加了起飞日期这一特征，并划分为工作日、周末、节假日三个维度。使用转换矩阵将用户的显性偏好和机票的显性内容都映射到隐性空间。使用梯度下降算法推导模型参数，得到基于隐性特征的用户偏好，与用户的显性特征偏好相结合，提升机票推荐准确率。
+4.提出结合隐性特征的机票推荐算法。通过对比不同起飞日期的机票推荐准确率，证明了用户的偏好并非一成不变，而是在某些起飞日期可能会产生行为变化。而用户的显性特征偏好模型无法反映这一特点。我们为用户模型和机票内容添加起飞日期特征，并划分为工作日、周末、节假日三个维度。使用转换矩阵将用户的显性偏好和机票的显性内容都映射到隐性空间。使用梯度下降算法推导模型参数，得到基于隐性特征的用户偏好，与用户的显性特征偏好相结合，提升机票推荐准确率。
 
 \section{未来工作展望}
 
 本文对结合用户偏好的机票推荐问题进行了研究。使用用户的历史数据构建给予特征分布的用户偏好模型。并对机票推荐中的一些场景和问题进行细化一研究，进一步提升了推荐准确率。由于时间精力有限，仍有部分问题需要改进与提高，未来的研究方向可以就以下几点展开：
 
-1.深入挖掘机票特征。当前我们的模型都是建立在诸如机票的内容特征上。这些特征只能表示用户的决策结果，却不能全面体现出用户的决策过程。在未来的研究中，我们可以从用户的行为中挖掘更多的特征。可以利用的数据包括用户的搜索、点击、筛选行为记录，用户登录的时间、地理位置等信息。结合用户行为和机票内容的模型可能会提供准确率更高的推荐。
+1. 深入挖掘机票特征。当前的模型都是建立在诸如机票的内容特征上。这些特征只能表示用户的决策结果，却不能全面体现出用户的决策过程。在未来的研究中，可以从用户的行为中挖掘更多的特征。可以利用的数据包括用户的搜索、点击、筛选行为记录，用户登录的时间、地理位置等信息。结合用户行为和机票内容的模型可能会提供准确率更高的推荐。
 
-2.挖掘机票特征间的相关性。当前我们对于机票的每个特征都是独立建模的，没有考虑特征之间的关联性。例如舱位和价格、航司和退改签政策之间是具有相关性的。在未来的研究中，我们可以使用特征提取的方法更多地研究特征之间的相关性，提升模型的准确率。
+2. 挖掘机票特征间的相关性。当前对于机票的每个特征都是独立建模的，没有考虑特征之间的关联性。例如舱位和价格、航司和退改签政策之间是具有相关性的。在未来的研究中，可以使用特征提取的方法更多地研究特征之间的相关性，提升模型的准确率。
 
-3.机票附加产品组合推荐。用户在选定机票之后，往往会选定一些机票附加产品，例如机票延误险、接送机专车、候机休息室等。未来我们会研究机票附加产品的推荐，与机票推荐方法结合，促进提升机票推荐的效果。
+3. 机票附加产品组合推荐。用户在选定机票之后，往往会选定一些机票附加产品，例如机票延误险、接送机专车、候机休息室等。未来我们会研究机票附加产品的推荐，与机票推荐方法结合，促进提升机票推荐的效果。
 
-4.机票中转推荐。目前我们所做的研究都是基于直达航班的推荐。然而对于部分航程，可能存在中转航班、航班-高铁组合的情况。这类问题会产生更严重的信息超载现象，很具有挑战性。在国际航线和一些国内特定航线也具有研究意义。
+4. 机票中转推荐。目前我们所做的研究都是基于直达航班的推荐。然而对于部分航程，可能存在中转航班、航班-高铁组合的情况。这类问题会产生更严重的信息超载现象，很具有挑战性。在国际航线和一些国内特定航线也具有研究意义。
