--- a/tex/id.tex
+++ b/tex/id.tex
@@ -1,5 +1,5 @@
 %# -*- coding: utf-8-unix -*-
-\title{面向机票的推荐方法}
+\title{面向机票的个性化推荐方法}
 \author{赵亚峰}
 \advisor{曹健}
 \defenddate{2017年1月}
@@ -15,6 +15,6 @@
 \englishinstitute{\textsc{School of Electronic Information and Electrical Engineering} \\
   \textsc{Shanghai Jiao Tong University} \\
   \textsc{Shanghai, P.R.China}}
-\englishmajor{A Very Important Major}
+\englishmajor{Computer Science and Technology}
 \englishdate{January, 2017}
 
