--- a/tex/01_intro.tex
+++ b/tex/01_intro.tex
@@ -91,7 +91,7 @@
 \subsection{文章结构安排}
 本文共七个章节，文章结构安排如下：
 
-第一张绪论，从业务应用场景分析了研究问题的应用意义及遇到的挑战，并从多方面系统地分析了研究问题的可行性。其后，从学术研究和产业应用两个层面介绍了推荐系统和机票推荐的国内外研究现状。分析了机票推荐中目前存在的问题并在本文研究中予以分析、解决。最后，章节对本文主要研究工作进行简要介绍。
+第一章绪论，分析了机票推荐问题的实际应用意义及问题研究的挑战性，并从多方面系统地分析了研究问题的可行性。其后，从学术研究和产业应用两个层面介绍了推荐系统和机票推荐的国内外研究现状。分析了机票推荐中目前存在的问题并在本文研究中予以分析、解决。最后，章节对本文主要研究工作进行简要介绍。
 
 第二章相关技术，介绍了文章研究中涉及的相关研究技术领域。本章中依次介绍了基于内容推荐、协同过滤推荐以及主题模型等相关技术。这些技术分别是后续各章节中本文展开研究工作的理论基础。
 
