--- a/tex/02_related.tex
+++ b/tex/02_related.tex
@@ -3,12 +3,11 @@
 
 \section{基于内容推荐系统}
 
-基于内容的推荐系统的特点是根据物品内容与用户偏好的契合度为用户进行推荐\cite{lops2011content}。系统首先需要通过文档、描述说明等资料对用户历史记录中的物品进行分析，为内容物品建立模型，并基于物品的特征为用户建立偏好模型。为了能够直观、简单地为用户提供推荐，物品模型与用户偏好模型通常具有相似的结构。基于内容推荐算法首先将用户偏好与物品进行匹配，根据匹配度，我们可以得知用户对该物品的偏好程度，并为用户进行信息甄别与筛选，从而解决系统中的信息超载问题。
+基于内容的推荐系统的特点是根据物品内容与用户偏好的契合度为用户进行推荐\cite{lops2011content}。系统首先需要通过文档、描述说明等资料对用户历史记录中的物品进行分析，为内容物品建立模型，并基于物品的特征为用户建立偏好模型。为了能够直观、简单地为用户提供推荐，物品表示模型通常与用户偏好表示模型相似。基于内容算法可以将候选物品与用户偏好进行匹配，根据匹配度，我们可以得知用户对该物品的偏好程度，并为用户进行信息甄别与筛选，从而解决系统中的信息超载问题。
 
-\subsection{基于内容推荐系统架构}
-基于内容的推荐系统需要对物品内容和用户模型使用合适的方法进行分析，还需要衡量用户偏好和物品相似度的策略。系统可以分为三个关键组件，分别是内容分析、用户偏好学习以及物品过滤。
+\subsection{基于内容推荐的系统架构}
 
-在内容分析组件处理之前，物品通常是非结构化的，一般需要对物品进行预处理以提取结构相关信息。内容分析组件的主要任务就是通过特征提取将物品从源信息空间迁移到目标空间，将物品的内容进行结构化表示。偏好学习组件通过统计学方法对表示用户偏好的数据进行收集与归纳，推导出用户的偏好模型。物品过滤组件将候选物品按与用户偏好模型之间的相似度进行排序，从而为用户推荐新物品\cite{herlocker2004evaluating}。
+基于内容的推荐系统主要分为三个关键组件，分别是内容分析组件、用户偏好学习组件以及物品过滤组件。在内容分析组件处理之前，物品通常是非结构化的，一般需要对物品进行预处理以提取结构相关信息。内容分析组件的主要任务就是通过特征提取将物品从源信息空间迁移到目标空间，将物品的内容进行结构化表示。偏好学习组件通过统计学方法对表示用户偏好的数据进行收集与归纳，推导出用户的偏好模型。物品过滤组件将候选物品按与用户偏好模型之间的相似度进行排序，从而为用户推荐新物品\cite{herlocker2004evaluating}。
 
 \begin{figure}
  \centering
