--- a/tex/03_baseline.tex
+++ b/tex/03_baseline.tex
@@ -8,7 +8,7 @@
 \section{数据来源及描述}
 
 本论文研究工作使用的数据由国内知名的在线票务网站提供。数据以表的格式组织，每条数据为一张机票订单。原始数据记录中的主要字段如表\ref{tab:fields}所示。
-表格的前两项分别标识航班所属的航线；由于国内部分城市有两个或更多个机场，所以需要标注航班的起飞机场和到达机场；航班舱位等级包括经济舱、商务舱和头等舱三类；飞机型号包含了飞机的大小等特征。
+起飞城市和到达城市标识航班所属的航线。由于国内部分城市有两个或更多个机场，还需要标注航班的起飞机场和到达机场。航班舱位等级包括经济舱、商务舱和头等舱三类。飞机型号包含了飞机的大小等特征。
 \begin{table}[!h]
   \centering
   \bicaption[tab:fields]{字段介绍}{原始机票订单数据的字段}{Table}{Fields of 
@@ -16,7 +16,7 @@
   \begin{tabular}{|c|c|} \hline 
     字段名称 & 字段描述\\ \hline
     Origin City & 起飞城市 \\ \hline
-    Destination City & 落地城市 \\ \hline
+    Destination City & 到达城市 \\ \hline
     Takeoff Date & 起飞日期 \\ \hline
     Takeoff Time & 起飞时间 \\ \hline
     Airline & 航班所属航空公司 \\ \hline
@@ -30,7 +30,7 @@
   \end{tabular}
 \end{table}
 
-表格中的字段表明了机票数据高度结构化的特性。机票数据的属性与书籍、电影、音乐等物品的属性不同。后者的属性通常仅作为物品分类的依据，不能直接反映物品本身的内容。而机票数据的属性则可以代表机票本身的内容，进而直接影响用户的购买决策。另外，不同于上述物品固定的静态属性，机票的价格属于动态属性，即使对于相同航班的同一等级的舱位，其票价在起飞前会发生持续变动，并且变动的幅度很大。而价格作为机票内容中相当重要的一项，会在很大程度上影响用户的选择。因此，即使两张机票具有相同的的航班号和舱位等级，如果它们的价格不同，我们也不能将其当作同一个物品，也难以直接使用以 User-Item 矩阵表示的协同过滤类型的方法进行机票推荐。根据机票数据具备的上述特性，我们主要使用基于内容的方法进行机票推荐。此外，用户搜索时产出的候选机票数量约为一百左右，远低于传统推荐系统中成千上万的物品数量，但是每项候选机票都算作一个新的物品。个性化机票推荐的流程相当于将这数百项候选机票针对用户的特征模型进行重新排序，最终按照排序后的结果向用户展示。因此，我们首先需要为每位用户进行偏好建模。
+表格中的字段展示了机票物品高度结构化的特性。机票数据的属性与书籍、电影、音乐等物品的属性不同，后者的特征通常仅作为物品分类的依据，不能直接反映物品本身的内容，而机票数据的属性则可以代表机票本身的内容，进而直接影响用户的购买决策。另外，不同于上述物品固定的静态属性，机票的价格属于动态属性，即使对于相同航班的同一等级的舱位，其票价在起飞前会发生持续变动，并且变动的幅度很大。而价格作为机票内容中相当重要的一项，会在很大程度上影响用户的选择。因此，即使两张机票具有相同的的航班号和舱位等级，如果它们的价格不同，我们也不能将其当作同一个物品，也难以直接使用以 User-Item 矩阵表示的协同过滤类型的方法进行机票推荐。根据机票具备的上述特性，我们主要使用基于内容的方法进行机票推荐。此外，用户搜索时产出的候选机票数量约为一百左右，远低于传统推荐系统中成千上万的物品数量，但是每项候选机票都算作一个新的物品。个性化机票推荐的流程相当于将这数百项候选机票针对用户的习惯偏好进行重新排序，按照排序后的结果向用户展示。因此，我们首先需要为每位用户进行偏好建模。
 
 \section{用户特征分布模型}
 
@@ -38,16 +38,16 @@
 
 \subsection{机票数据预处理与特征选取}
 
-从表\ref{tab:fields}中可以发现，机票的特征主要分为两种类型。一种是包括机票价格、起飞时间的连续型特征，而其余的均为离散型特征。为了便于构建模型，我们将两个连续特征进行离散化。起飞时间的离散化过程比较直观，可以将时间分为上午、下午、傍晚、夜间等几个区间。而价格特征的离散化较为复杂。首先，不同航线具有不同的基准价格；其次，对于同一条航线，在距离起飞日期不同的天数，同一个价格可能代表不同的价位相对高低程度。结合实际的推荐应用场景，我们使用了如下公式作为价格指数：
+从表\ref{tab:fields}中可以发现，机票的特征主要分为两种类型。一种是包括机票价格、起飞时间的连续型特征，而其余的均为离散型特征。为了便于构建模型，我们将两个连续特征进行离散化。起飞时间的离散化过程比较直观，可以将时间分为上午、下午、傍晚、夜间等几个区间。而价格特征的离散化较为复杂，首先，不同航线具有不同的基准价格；其次，对于同一条航线，在距离起飞日期不同的天数，同一个价格可能代表不同的相对价位高低程度。结合实际的推荐应用场景，我们使用了如下公式作为价格指数：
 \begin{equation}
 	P_{KPI} = \frac{P_{full} - P_{cur}}{P_{full} - P_{low}}
 \end{equation}
 
 其中，$P_{full}$的含义是经济舱无折扣价格，是航空公司制定的标准价，变动频率很小（通常以年为单位）；
 $P_{cur}$是当前机票的价格，在每条订单记录中可以获取；$P_{low}$是本次搜索页面中的最低价。
-从几项参数的含义可以看出，如果用户选择的机票价格很低，分子越大，等式的值越接近于1；反之，等式的值越小。当票价高于经济舱全价时，价格指数的值小于0。因此，价格指数越大，代表用户更倾向于选择低价机票，即对票价越敏感。我们可以使用价格指数代表多变而重要的价格特征。并且，通过该公式计算出的价格指数与航线、距离起飞日期天数等因素无关，进而具有良好的通用性。得到价格指数后，可以结合业务领域知识将其划分为数个有代表性的区间。
+从几项参数的含义可以看出，如果用户选择的机票价格很低，分子越大，等式的值越接近于1；反之，等式的值越小。当票价高于经济舱全价时，价格指数的值小于$0$。因此，价格指数越大，代表用户更倾向于选择低价机票，即对票价越敏感。我们可以使用价格指数代表多变而重要的价格特征。并且，通过该公式计算出的价格指数与航线、距离起飞日期天数等因素无关，进而具有良好的通用性。得到价格指数后，可以结合业务领域知识将其划分为数个有代表性的区间。
 
-完成对连续型特征的离散化后，我们又选取了起飞机场、到达机场（对于包含多机场城市的航线）、航空公司、舱位等级、退改签政策、飞机型号等关键特征。这些特征可以初步理解为对机票内容的概括。至此，机票的一个特征可以表示为一个向量，该向量的每个维度代表该特征对应的每个可能的取值（区间）。用户对一个特征中某个维度的偏好值可以由用户在对应维度所占的选择频数百分比来描述，选择频数可以通过用户的历史订单统计。由定义可知，用户在一个特征上所有维度的分布百分比值之和为1。
+完成对连续型特征的离散化后，我们又选取了起飞机场、到达机场（对于包含多机场城市的航线）、航空公司、舱位等级、退改签政策、飞机型号等关键特征。这些特征可以初步理解为对机票内容的概括。至此，机票的一个特征可以表示为一个向量，该向量的每个维度代表该特征对应的每个可能的取值（区间）。用户对一个特征中某个维度的偏好值可以由用户在对应维度所占的选择频数百分比来描述，选择频数可以通过用户的历史订单统计。由定义可知，用户在一个特征上所有维度的分布百分比值之和为$1$。
 
 \begin{equation}
 \label{eq:dict}
