--- a/tex/05_share.tex
+++ b/tex/05_share.tex
@@ -271,7 +271,7 @@ top-N = \frac{\sum_{i=1}^{|M|}|top-N(u_i) \cap O_{u_i}|}{|M|}
 \subsection{机票推荐准确率}
 本小节我们为账户（用户）进行机票推荐，虽然已经训练了乘客预测模型，并且进行了乘客粒度的特征分布模型学习。在实际应用中，机票推荐还是在用户粒度进行的。我们将从基于排序的推荐准确率和$Top-N$准确率两个角度进行衡量。
 
-\begin{figure}
+\begin{figure}[!h]
 \centering
 \subfigure[真实账户推荐准确率]{
  \label{fig:pre_rec_r}
