--- a/thesis.tex
+++ b/thesis.tex
@@ -43,8 +43,9 @@
 	\includepdf{pdf/authorization.pdf}
 	\cleardoublepage
 \else
-	\makeDeclareOriginal
-	\makeDeclareAuthorization
+\relax
+%	\makeDeclareOriginal
+%	\makeDeclareAuthorization
 \fi
 \makeatother
 
